crates/toml/tests/snapshots/invalid/spec-1.1.0/common-5.stderr
TOML parse error at line 1, column 1
  |
1 | = "no key name"           # INVALID
  | ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`

---
TOML parse error at line 2, column 1
  |
2 | """key""" = "not allowed" # INVALID
  | ^^^^^^^^^
keys cannot be multi-line basic strings, expected basic string, literal string

---
TOML parse error at line 3, column 1
  |
3 | "" = "blank"              # VALID but discouraged
  | ^^
duplicate key

---
TOML parse error at line 4, column 1
  |
4 | '' = 'blank'              # VALID but discouraged
  | ^^
duplicate key
